Refactor database connection and schema; enhance logging and metrics for API performance